<resources>
    <string name="app_name">Power App</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="body_weight">Body Weight</string>
    <string name="height">Height</string>
    <string name="done">Done</string>
    <string name="photo">Photo</string>
    <string name="save">Save profile</string>
    <string name="cancel">Cancel</string>
    <string name="new_profile">Add new profile</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">version: 2137</string>
    <string name="login">login</string>
    <string name="swipe_left_for_register">swipe left for register</string>
    <string name="register">Register</string>
    <string name="your_name">Your name</string>
    <string name="re_type_password">Repeat password</string>
    <string name="swipe_right_for_login">Swipe right for login</string>
    <string name="logout">Logout</string>
    <string name="formName">Name:</string>
    <string name="formSurname">Surname:</string>
    <string name="formWeight">Weight:</string>
    <string name="formHeight">Height:</string>
    <string name="formStart">Start</string>
    <string name="formEdit">Edit</string>
    <string name="formDelete">Delete</string>
    <string name="Delete">Delete</string>
</resources>